fixing images height when too small

--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -111,6 +111,7 @@ body {
 }
 #posts img {
     max-width: 100%;
+    height: auto;
 }
 iframe {
     width: 100%;
